aside and media query LG overflow fix

--- a/style.css
+++ b/style.css
@@ -56,13 +56,27 @@ aside .container {
   height: calc(100% - 57px);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 aside .box {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+aside .box:nth-of-type(4) {
+  height: 90px;
+}
+
+aside .overflow-container {
+  height: calc(100% - 206px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.overflow-container .box.library {
+  height: calc(100% - 90px);
 }
 
 #logo {
@@ -392,32 +406,41 @@ footer {
   }
 
   /* library section S */
-  #library {
+  .library {
     width: 100%;
     display: block;
   }
 
-  #library h3 {
+  .library h3 {
     color: white;
     margin: 10px 0 5px;
   }
 
-  #library ul li {
-    display: flex;
+  .library ul {
     width: 100%;
-    height: 30px;
+    display: flex;
+    flex-direction: column;
+    overflow: scroll;
+  }
+
+  .library ul li {
+    width: 100%;
+    min-height: 30px;
+    display: flex;
     align-items: center;
     font-size: 14px;
     list-style: none;
     color: rgba(90, 90, 90, 1);
   }
 
-  #library li#create-pl {
+  #create-pl {
     height: 34px;
-    font-size: initial;
+    display: flex;
+    align-items: center;
+    color: rgba(90, 90, 90, 1);
   }
 
-  #library li#create-pl i {
+  #create-pl i {
     font-size: 18px;
     margin-right: 8px;
   }
@@ -450,8 +473,13 @@ footer {
 @media screen and (min-width: 1025px) {
 
   /* MAIN - played section */
+  .playlist-container {
+    flex-wrap: nowrap;
+    overflow: scroll;
+  }
+
   .playlist {
-    width: calc(100% / 6);
+    min-width: 200px;
   }
 
   .playlist h4 {
